# Entretiens-Cohort360

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json  turbo.json
.github/workflows/: ci.yml
Exercice_Django/: .gitignore  README.md  requirements.txt
Exercice_Django/config/: settings.py
Exercice_Django/medical/: filters.py  models.py  serializers.py  urls.py  views.py  widgets.py
Exercice_Django/medical/management/commands/: seed_demo.py
Exercice_Django/medical/migrations/: 0001_initial.py  0002_prescription.py  0003_alter_prescription_prescription_start_date.py
Exercice_Django/medical/tests/: test_api.py  test_prescription.py
Exercice_Front/: README.md  package-lock.json  package.json
Exercice_Front/medical/: jest.config.cjs  package-lock.json  package.json  tsconfig.json
Exercice_Front/medical/src/: App.tsx  index.css
Exercice_Front/medical/src/api/: axios.ts
Exercice_Front/medical/src/assets/styles/: GlobalStyles.ts  global.css
Exercice_Front/medical/src/components/layout/: Layout.tsx
Exercice_Front/medical/src/config/: config.ts  theme.ts
Exercice_Front/medical/src/pages/Home/: Home.tsx
Exercice_Front/medical/src/pages/Medications/: Medications.tsx  index.ts
Exercice_Front/medical/src/pages/Patients/: Patients.tsx
Exercice_Front/medical/src/pages/Prescriptions/: Prescriptions.test.tsx  Prescriptions.tsx  index.ts
Exercice_Front/medical/src/router/: AppRouter.tsx
Exercice_scala_spark/: README.md  docker-compose.yml  init_solr.sh
Exercice_scala_spark/src/main/resources/: query.json
Exercice_scala_spark/src/main/scala/com/exercise/model/: SearchCriteria.scala
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/config/: settings.py  urls.py
apps/api/medical/: models.py  serializers.py  urls.py  views.py
apps/api/medical/management/commands/: seed_demo.py
apps/api/medical/migrations/: 0001_initial.py
apps/api/medical/tests/: test_api.py
apps/web/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css
docs/exercises/: README.md
docs/exercises/django/: README.md
docs/exercises/react/: README.md
docs/exercises/scala/: README.md
e2e/: README.md  fixtures.ts
e2e/tests/: example.spec.ts
exercises/spark/: build.sbt
exercises/spark/src/main/scala/com/exercise/: Main.scala
exercises/spark/src/main/scala/com/exercise/engine/: CohortSearchEngine.scala
exercises/spark/src/main/scala/com/exercise/utils/: SolrConnector.scala
