[project]
name = "exercice-django-prescription"
version = "1.0.0"
description = "Django REST API for prescription management - AP-HP technical exercise"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Candidate", email = "candidate@example.com" }
]
keywords = ["django", "rest-api", "healthcare", "prescription", "fhir"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

dependencies = [
    "django>=5.2,<6.0",
    "djangorestframework>=3.15",
    "django-filter>=24.3",
    "django-cors-headers>=4.6",
    "python-dotenv>=1.0",
    "gunicorn>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "django-stubs>=5.1",
    "djangorestframework-stubs>=3.15",
    "pre-commit>=4.0",
    "ipython>=8.30",
]

[project.urls]
Homepage = "https://github.com/aphp/Entretiens-Cohort360"
Repository = "https://github.com/aphp/Entretiens-Cohort360"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["medical", "config"]

# ==================== UV Configuration ====================
[tool.uv]
managed = true

# ==================== Ruff Configuration ====================
[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DJ",     # flake8-django
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["medical", "config"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"django" = ["django", "rest_framework", "django_filters"]

# ==================== MyPy Configuration ====================
[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
ignore_missing_imports = true
exclude = ["migrations/"]

[tool.django-stubs]
django_settings_module = "config.settings"

# ==================== Pytest Configuration ====================
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ==================== Coverage Configuration ====================
[tool.coverage.run]
branch = true
source = ["medical"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
